# neuro_tech

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMMANDS.md  COMPARISON.md  DOCKER_SETUP.md  Dockerfile  README.md  RESTART_INSTRUCTIONS.md  TEST_AIRFLOW.md  docker-compose-bitnami.yml  docker-compose.standalone.yml  docker-compose.yml  eda_notebook.ipynb  example_medallion.py  example_run.txt  export_refined_dataset.py  install-requirements.sh  main.py  pyproject.toml  requirements-pyspark.txt  requirements.txt  stop_all_dags.ps1  stop_all_dags.sh  test_dag.sh  test_delta.py  test_links.md  test_pydeequ.py
dags/: iptu_pipeline_dag.py
notebooks/: pipeline_execution.ipynb  visualizations.ipynb
scripts/: example_pyspark.py  example_usage.py  export_refined_dataset.py  generate_plots.py
src/iptu_pipeline/: __init__.py  airflow_dag.py  config.py  config_example.py  dashboard.py  engine.py  orchestration.py  visualizations.py
src/iptu_pipeline/pipelines/: __init__.py  analysis.py  ingestion.py  main_pipeline.py  medallion_pipeline.py  transformation.py
src/iptu_pipeline/utils/: __init__.py  column_matcher.py  data_quality.py  logger.py  medallion_quality.py  raw_catalog.py
